--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "build:client": "npm run build --prefix client",
     "build": "npm run install:client && npm run build:client && npm run install:server",
     "seed:prod": "node server/seedAll.js",
+    "check:data": "node server/check_data.js",
     "start": "node server/server.js"
   }
 }
