Fix: trust proxy and model schema casing

--- a/server/.env
+++ b/server/.env
@@ -1,5 +1,5 @@
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/tai-learning-platform
+MONGO_URI=mongodb+srv://abubakerosman56:GenzAcademy2026@cluster0.hl6jgqr.mongodb.net/?appName=Cluster0
 JWT_SECRET=your_jwt_secret_key_here
 GOOGLE_CLIENT_ID=397451034442-f8m7f8i7j0j9j8j7j6j5j4j3j2j1j0j9.apps.googleusercontent.com
 GITHUB_CLIENT_ID=Iv23livV6kP5uT8U9h7A
